# Commander

./: .gitignore  CMakeLists.txt  CMakePresets.json  Commands.json  Config.json  README.md  data.json
source/: Application.cpp  Application.hpp  Command.cpp  Command.hpp  CommandButton.cpp  CommandButton.hpp  CommandPanel.cpp  CommandPanel.hpp  Config.cpp  Config.hpp
